tried to fix a pb on mobile device for portfolio (img too long )

--- a/css/main.css
+++ b/css/main.css
@@ -205,32 +205,27 @@ h1 {
 
 /*CAROUSEL */
 .realisation .carousel {
-  /*justify-content: center;*/
-  /*align-items: center;*/
   margin: auto;
   padding: 0;
   display: flex;
-
-  /*max-height: 500px;*/
-  /*width: 100%;*/
+  max-height: 400px;
   max-width: 500px;
   overflow: hidden;
-  /*border-bottom: 3px solid #3F4847;*/
-  /*border-top: 3px solid #3F4847;*/
   position: relative;
 }
 
 .realisation img {
   margin: auto;
   min-width: 100%;
-  height: 100%;
+  /*max-height: 400px;*/
+  /*border: 1px solid red;*/
 }
 
 .carousel .carouselslide {
   left: 0px;
 	position: relative;
 	min-width: 100%;
-  max-height: 500px;
+  min-height: 100%;
 	margin: 0;
   padding: 0;
 	/*padding: 0;*/
@@ -378,18 +373,20 @@ h1 {
   width: 250px;
   height: auto;
   text-align: center;
+  font-weight: bolder;
 }
 
 .equipe .equipedetail {
   height: 0px;
   border-right: 3px solid  #E33849;
   overflow: hidden;
+  font-weight: lighter;
   transition: 0.6s;
 }
 
 .equipe figure img {
   overflow: hidden;
-  border: 3px solid gray;
+  border: 4px solid gray;
   border-radius: 150px;
   width: 100%;
 }
@@ -399,7 +396,7 @@ h1 {
 }
 
 .equipe figure:hover .equipedetail {
-  height: 70px;
+  height: 78px;
   min-width: 100%;
   /*border-top : 3px solid #E33849;*/
 }
